@@ -1,9 +1,9 @@
 /*-
  * See the file LICENSE for redistribution information.
  *
- * Copyright (c) 2000,2007 Oracle.  All rights reserved.
+ * Copyright (c) 2000-2009 Oracle.  All rights reserved.
  *
- * $Id: BlockIterator.java,v 12.5 2007/05/04 00:28:25 mark Exp $
+ * $Id$
  */
 
 package com.sleepycat.collections;
@@ -18,15 +18,15 @@ import com.sleepycat.db.OperationStatus;
 import com.sleepycat.util.keyrange.KeyRange;
 
 /**
- * An iterator that does need closing because a cursor is not kept open across
- * method calls.  A cursor is opened to read a block of records at a time and
- * then closed before the method returns.
+ * An iterator that does not need closing because a cursor is not kept open
+ * across method calls.  A cursor is opened to read a block of records at a
+ * time and then closed before the method returns.
  *
  * @author Mark Hayes
  */
-class BlockIterator implements BaseIterator {
+class BlockIterator<E> implements BaseIterator<E> {
 
-    private StoredCollection coll;
+    private StoredCollection<E> coll;
     private boolean writeAllowed;
 
     /**
@@ -42,6 +42,14 @@ class BlockIterator implements BaseIterator {
      * nextIndex is always greater or equal to zero.  If the next record is not
      * available, then nextIndex is equal to keys.length or keys[nextIndex] is
      * null.
+     *
+     * If the block is empty, then either the iterator is uninitialized or the
+     * key range is empty.  Either way, nextIndex will be the array length and
+     * all array values will be null.  This is the initial state set by the
+     * constructor.  If remove() is used to delete all records in the key
+     * range, it will restore the iterator to this initial state.  The block
+     * must never be allowed to become empty when the key range is non-empty,
+     * since then the iterator's position would be lost.  [#15858]
      */
     private int nextIndex;
 
@@ -59,12 +67,14 @@ class BlockIterator implements BaseIterator {
      * that set() or remove() cannot be called.  For example, after add() this
      * field is set to null, even though the dataIndex is still valid.
      */
-    private Object dataObject;
+    private E dataObject;
 
     /**
      * Creates an iterator.
      */
-    BlockIterator(StoredCollection coll, boolean writeAllowed, int blockSize) {
+    BlockIterator(StoredCollection<E> coll,
+                  boolean writeAllowed,
+                  int blockSize) {
 
         this.coll = coll;
         this.writeAllowed = writeAllowed;
@@ -81,7 +91,7 @@ class BlockIterator implements BaseIterator {
     /**
      * Copy constructor.
      */
-    private BlockIterator(BlockIterator o) {
+    private BlockIterator(BlockIterator<E> o) {
 
         coll = o.coll;
         writeAllowed = o.writeAllowed;
@@ -264,7 +274,7 @@ class BlockIterator implements BaseIterator {
     }
 
     /**
-     * Moves the cursor to the key/data at the given slot, and returns false 
+     * Moves the cursor to the key/data at the given slot, and returns false
      * if the reposition (search) fails.
      */
     private boolean moveCursor(int i, DataCursor cursor)
@@ -397,7 +407,7 @@ class BlockIterator implements BaseIterator {
             int last = keys.length - 1;
             int next = nextIndex;
             boolean found = false;
-        
+
             /* Reposition to the last known key/data pair. */
             int repos = cursor.repositionRange
                 (keys[next], priKeys[next], values[next], false);
@@ -460,7 +470,7 @@ class BlockIterator implements BaseIterator {
         }
     }
 
-    public Object next() {
+    public E next() {
 
         if (hasNext()) {
             dataIndex = nextIndex;
@@ -472,7 +482,7 @@ class BlockIterator implements BaseIterator {
         }
     }
 
-    public Object previous() {
+    public E previous() {
 
         if (hasPrevious()) {
             nextIndex -= 1;
@@ -508,7 +518,7 @@ class BlockIterator implements BaseIterator {
                              : (-1);
     }
 
-    public void set(Object value) {
+    public void set(E value) {
 
         if (dataObject == null) {
             throw new IllegalStateException();
@@ -547,6 +557,49 @@ class BlockIterator implements BaseIterator {
                 cursor.delete();
                 deleteSlot(dataIndex);
                 dataObject = null;
+
+                /*
+                 * Repopulate the block after removing all records, using the
+                 * cursor position of the deleted record as a starting point.
+                 * First try moving forward, since the user was moving forward.
+                 * (It is possible to delete all records in the block only by
+                 * moving forward, i.e, when nextIndex is greater than
+                 * dataIndex.)
+                 */
+                if (nextIndex == 0 && keys[0] == null) {
+                    OperationStatus status;
+                    for (int i = 0; i < keys.length; i += 1) {
+                        status = coll.iterateDuplicates() ?
+                                 cursor.getNext(false) :
+                                 cursor.getNextNoDup(false);
+                        if (status == OperationStatus.SUCCESS) {
+                            setSlot(i, cursor);
+                        } else {
+                            break;
+                        }
+                    }
+
+                    /*
+                     * If no records are found past the cursor position, try
+                     * moving backward.  If no records are found before the
+                     * cursor position, leave nextIndex set to keys.length,
+                     * which is the same as the initial iterator state and is
+                     * appropriate for an empty key range.
+                     */
+                    if (keys[0] == null) {
+                        nextIndex = keys.length;
+                        for (int i = nextIndex - 1; i >= 0; i -= 1) {
+                            status = coll.iterateDuplicates() ?
+                                     cursor.getPrev(false) :
+                                     cursor.getPrevNoDup(false);
+                            if (status == OperationStatus.SUCCESS) {
+                                setSlot(i, cursor);
+                            } else {
+                                break;
+                            }
+                        }
+                    }
+                }
                 coll.closeCursor(cursor);
                 coll.commitAutoCommit(doAutoCommit);
             } else {
@@ -558,7 +611,7 @@ class BlockIterator implements BaseIterator {
         }
     }
 
-    public void add(Object value) {
+    public void add(E value) {
 
         /*
          * The checkIterAddAllowed method ensures that one of the following two
@@ -626,7 +679,7 @@ class BlockIterator implements BaseIterator {
                     if (!moveCursor(insertIndex, cursor)) {
                         throw new IllegalStateException();
                     }
-                    
+
                     /*
                      * For a recno-renumber database or a database with
                      * unsorted duplicates, insert before the iterator 'next'
@@ -689,6 +742,7 @@ class BlockIterator implements BaseIterator {
             coll.closeCursor(cursor);
             coll.commitAutoCommit(doAutoCommit);
         } catch (Exception e) {
+            /* Catch RuntimeExceptions too. */
             coll.closeCursor(cursor);
             throw coll.handleException(e, doAutoCommit);
         }
@@ -698,9 +752,9 @@ class BlockIterator implements BaseIterator {
 
     // --- begin BaseIterator methods ---
 
-    public final ListIterator dup() {
+    public final ListIterator<E> dup() {
 
-        return new BlockIterator(this);
+        return new BlockIterator<E>(this);
     }
 
     public final boolean isCurrentData(Object currentData) {
@@ -714,7 +768,7 @@ class BlockIterator implements BaseIterator {
         try {
             cursor = new DataCursor(coll.view, writeAllowed);
             OperationStatus status =
-                cursor.getSearchKey(new Integer(index), null, false);
+                cursor.getSearchKey(Integer.valueOf(index), null, false);
             if (status == OperationStatus.SUCCESS) {
                 clearSlots();
                 setSlot(0, cursor);
